feat(fix) : Fixes Junit